--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <head>
   <title></title>
   <link rel="shortcut icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
